# complement-product

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
code/: CMakeLists.txt
code/src/alg/: CMakeLists.txt
code/src/alg/cpp/alg/: algorithm.cpp
code/src/alg/include/public/alg/: algorithm.hpp
code/tests/alg/: CMakeLists.txt
code/tests/alg/cpp/alg/: algorithm_tests.cpp
code/tests/alg/include/private/alg/scaffolding/: algorithm.hpp
